Deployment from Statiq

--- a/release-notes/nextrelease.html
+++ b/release-notes/nextrelease.html
@@ -368,7 +368,11 @@
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    
+                                    <h2 id="http-transfers">HTTP Transfers</h2>
+<ul>
+<li>[Fix][iOS] add content-type to upload</li>
+</ul>
+
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
                                     <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/release-notes/nextrelease.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
